testsuite/tests/grammar/invalid_unparser/ambiguous-lists.lkt
grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Root("example" ASTList[FooNode]+(leaf, ","))
        | ASTList[FooNode]+(leaf)
    ))
    leaf <- or(Identifier(@identifier) | Number(@number))
}
